[package]
name = "meetup_obs_overlay"
version = "0.1.0"
authors = ["Brooks Patton <brooks@brookzerker.com>"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.45"
wasm-bindgen = "0.2.68"
web-sys = { version = "0.3.45", features = ['Document', 'Window', 'Element', 'HtmlElement', 'Node', 'console', 'DomTokenList'] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
debug = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
